[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/bullets/bulletRed2_outline.png" type="Texture" id=1]
[ext_resource path="res://ammo/rocket.gd" type="Script" id=2]
[ext_resource path="res://assets/fx/exploding_circle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 162.963

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 13 )

[node name="Rocket" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Radius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radius"]
position = Vector2( 0, -2.11893 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="SmokePosition" type="Position2D" parent="."]
position = Vector2( -15, 0 )

[node name="SmokeTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Rocket_body_entered"]
[connection signal="body_entered" from="Radius" to="." method="_on_Radius_body_entered"]
[connection signal="body_exited" from="Radius" to="." method="_on_Radius_body_exited"]
[connection signal="timeout" from="SmokeTimer" to="." method="_on_SmokeTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
